<resources>
    <string name="app_name">CookBook_App</string>
    <string name="main_label">PRZEPISOWO</string>
    <string name="meaning">Serwis z pysznymi przepisami</string>
    <string name="go_cooking">Przejdź do gotowania</string>
    <string name="desery">Desery</string>
    <string name="zupy">Zupy</string>
    <string name="main_course">Dania Główne</string>
    <string name="przekaski">Przekąski</string>
    <string name="napoje">Napoje</string>
    <string name="dania_wegańskie">Dania wegańskie</string>
    <string name="search">Wpisz nazwę dania</string>
    <string name="pizza">Pizza Neapolitanska</string>
    <string name="ramen">Ramen z wołowiną</string>
    <string name="recipe_image">pizza_nea</string>
    <string name="camera_icon">Ikona kamery</string>
</resources>