<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categories">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_label"
        android:textColor="@color/def_font"
        android:textSize="36sp"
        android:textStyle="bold"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="1.6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />

    <LinearLayout
        android:id="@+id/category_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/button_category1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/desery"
            android:textColor="@color/def_font"
            android:backgroundTint="@android:color/transparent"
            android:textStyle="bold"
            android:padding="8dp" />
        <Button
            android:id="@+id/button_category2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zupy"
            android:textColor="@color/def_font"
            android:backgroundTint="@android:color/transparent"
            android:textStyle="bold"
            android:padding="8dp" />
        <Button
            android:id="@+id/button_category3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_course"
            android:textColor="@color/def_font"
            android:backgroundTint="@android:color/transparent"
            android:textStyle="bold"
            android:padding="8dp" />
        <Button
            android:id="@+id/button_category4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/przekaski"
            android:textColor="@color/def_font"
            android:backgroundTint="@android:color/transparent"
            android:textStyle="bold"
            android:padding="8dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>